--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         <!-- navbar-->
         <div>
+            
             <nav class="navbar navbar-expand-lg fixed-top navbar-scroll navbar-dark shadow-lg p-30 mb-5 rounded">
                 <div class="container-fluid">
 
@@ -63,7 +64,7 @@
 
 
                     </div>
-
+               
                 </div>
             </nav>
 
@@ -72,11 +73,18 @@
 
         <!-- home img -->
         <div class="img-div"><img class="img-home" src="image2.png"></div>
+        <div class="align-side-icons">
+            <a  href="" ><img class="img-icon2" src="twitter.png" alt=""></a>
+            <a  href="" ><img class="img-icon2"  src="fb.png" alt=""></a>
+            <a  href="" ><img  class="img-icon2" src="linkdin.png" alt=""></a>
+        </div>
+
 
         <!-- content -->
         <div class="align-content">
-            <p> <img src="DISCOVER OUR SERVICES (1).png" alt=""> </p>
-            <p> <img src="lorem.png" alt=""></p>
+            <h2> DISCOVER OUR SERVICES</h2>
+            <br>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam urna magna, aliquam at augue eu, pretium molestie augue. Duis porttitor neque eget metus pharetra, non molestie ex congue. Nullam vehicula mollis aliquet. Ut condimentum congue varius. Duis sed elit nibh. Quisque malesuada, dui at luctus varius, dui ipsum vestibulum eros, nec pulvinar odio est vitae dui. In hac habitasse platea dictumst. Ut vulputate porta tellus.</p>
         </div>
 
         <!-- bottom icons -->
