--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
+
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello</title>
+    <title>Frontend Test</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
@@ -16,9 +13,7 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+   
     <div class="parent-container">
         <script src="" async defer></script>
 
@@ -42,14 +37,14 @@
 
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page" href="#intro"><img src="Vector.png" alt=""></a>
+                                <a class="nav-link" aria-current="page" href="#intro"><img src="logo1.png" alt=""></a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page" href="#intro"><img src="GREEN DREAMS.png"
+                                <a class="nav-link" aria-current="page" href="#intro"><img src="logo.png"
                                         alt=""></a>
                             </li>
                         </ul>
-
+                        
                         <div class="header-options-align-right">
                             <button type="button" class="btn btn-link px-3 me-2">
                                 <img src="About.png" alt="">
@@ -72,7 +67,7 @@
         <!-- navbar ends -->
 
         <!-- home img -->
-        <div class="img-div"><img class="img-home" src="image2.png"></div>
+        <div class="img-div"><img class="img-home" src="homeimage.png"></div>
         <div class="align-side-icons">
             <a  href="" ><img class="img-icon2" src="twitter.png" alt=""></a>
             <a  href="" ><img class="img-icon2"  src="fb.png" alt=""></a>
@@ -89,8 +84,8 @@
 
         <!-- bottom icons -->
         <div class="align-bottom-icons">
-            <span class="left"> <img class="img-icon" src="chat.png" alt=""></span>
-            <span class="right"> <img class="img-icon" src="down-arrow.png" alt=""></span>
+            <a class="left" href=""> <img class="img-icon" src="chat.png" alt=""></a>
+            <a class="right" href=""> <img class="img-icon" src="down-arrow.png" alt=""></a>
         </div>
 
 
